--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.en.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.en.yml
@@ -1,6 +1,44 @@
 title: Photo Content Assessment
 pat_default_index.h1: Photo Content Assessment
 
+index.questions: Would you like to see some photographs of London? Are you curious about how many different things can be happening in this city? Have a spare minute? If your answers are ‘yes’, then this website is made just for you!
+index.startbutton_newuser: Start the questionnaire!
+index.startbutton_returninguser: Start the questionnaire!
+
+index.startbutton-agreement: By pressing this button you agree that you don’t mind to anonymously share your answers.
+index.startbutton-tip: 'Tip: Use arrow keys to give answers and navigate across the questions; press Enter to submit the result − you’ll be much faster.'
+
+index.description_1_1: 'You are asked to take part in the research that is trying to investigate how data on photo-sharing websites can be used for the purpose of pedestrian routing. You can contribute by answering questions about randomly selected photographs shared on '
+index.description_1_2: Flickr
+index.description_1_3: ', '
+index.description_1_4: Panoramio
+index.description_1_5: ' and '
+index.description_1_6: Geograph
+index.description_1_7: '. You are free to spend as much time as you want, so don’t hesitate to join even you only have a minute − you’ll have a chance to continue at any time if you wish. The data that’s being collected is completely anonymous (the only thing we will record about you is an id, which is just a meaningless number), so there is nothing to worry about.'
+index.description_2: Ready to start? Go ahead and press that big blue button!  ↗
+
+index.details-header: Some details (if you want to know a bit more)
+
+index.details_1_1: 'The research is carried by '
+index.details_1_2: Alexander Kachkaev
+index.details_1_3: ', PhD student at School of Informatics, '
+index.details_1_4: City University London
+index.details_1_5: ' and is supervised by Professor '
+index.details_1_6: Jo Wood
+index.details_1_7: . The knowledge and experience gained from the questionnaire will be useful when implementing a new pedestrian routing algorithm, which will be made freely available at the end of the project. It is planned to release collected answers under a free license (
+index.details_1_8: CC BY 2.0
+index.details_1_8_title: Creative Commons Attribution 2.0 Generic
+index.details_1_9: '). No personal data is being collected and stored; the source code of the app is available '
+index.details_1_10: on Github
+index.details_1_11: .
+
+index.details_2_1: 'The sample of photographs consists of 900 randomly picked images (300 for each mentioned photo-sharing website) geotagged in Central London. Photographs from Flickr and Panoramio are being retrieved by means of service APIs and are copyrighted by their owners. All photographs from Geograph are distributed under '
+index.details_2_2: CC BY-SA 2.0
+index.details_2_2_title: Creative Commons Attribution-ShareAlike 2.0 Generic (CC BY-SA 2.0) 
+index.details_2_3: ' and are stored on the questionnaire server to avoid hotlinking.'
+
+index.details_3_1: The research has been approved by the University Research Ethics committee, School of Informatics City University London.
+
 participant.title: You are anonimously authenticated as this person and submit data under this name. No personal data is being collected.
 participant: Participant %n%
 
