--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
@@ -12,28 +12,33 @@ answer.night: ночь
 answer.twilight: сумерки
 
 question.IsRealPhoto: Является ли изображение фотографией?
-question.IsRealPhoto.hint: ""
+question.IsRealPhoto.hint: Ответ «нет» подходит для рисунков, диаграмм и любой другой графики. Если изображение — реальная фотография (даже если её обработали или воткнули в рамку), следует поставить «да».
 
 question.IsOutdoors: Это фотография чего-то вне помещения (на улице)?
-question.IsOutdoors.hint: ""
+question.IsOutdoors.hint: "Ответ «нет» подходит для фотографий, сделанных внутри зданий, (грубо говоря, под крышей): в кафе, музеях, на ж/д станциях и т. д. Ответ «да» подразумевается для фотографий улиц, парков, площадей (в целом, любых открытых пространств), даже если съёмка велась из окна автомобиля, здания, самолёта."
 
 question.TimeOfDay: В какое время дня сделана фотография?
-question.TimeOfDay.hint: ""
+question.TimeOfDay.hint: Просто выберете ответ, который, на ваш взгляд, лучше всего подходит.
 
 question.SubjectTemporary: Это фотография чего-то временного?
-question.SubjectTemporary.hint: ""
+question.SubjectTemporary.hint: "Ответ «да» подходит для фотографий мероприятий: парадов, концертов, марафонов и т. д., а также в случаях, когда основной объект съёмки находится на своём месте недолго (например, это дорогой припаркованный автомобиль или временный арт-объект). При этом ответ «нет» предназначен не только для полностью неподвижных предметов, но и тех, которые, судя по всему, часто встречаются месте съёмки (например, белки и лебеди в парках, корабли на реке и так далее)."
 
 question.SubjectPeople: Являются ли люди основным объектом фотографии?
-question.SubjectPeople.hint: ""
+question.SubjectPeople.hint: Если фотография — портрет, групповой снимок с вечеринки или нечто подобное, то подходящий ответ — «да». «Нет» ставится к фотографиям без людей, а также в тех случаях, когда присутствующие люди — случайные прохожие.
 
 question.IsLocationCorrect: Можно ли считать, что место указано правильно?
-question.IsLocationCorrect.hint: ""
+question.IsLocationCorrect.hint: |
+    Ответ «нет» следует давать в тех случаях, когда место, к которому прикручена фотография, кажется явно неверным. Например, на изображении — парк, а точка расположена посередине здания (или наоборот). Ничего страшного, если вы не знаете географию Лондона — ответить практически всегда легко и без этого. По желанию можно вручную передвинуть флажок на более подходящее место.
+    
+    Точка на карте должна указывать на место, где стоял фотограф, а не изображённый объект. Например, если перед вами — фотография Биг Бена, сделанная с расстояния 500 метров от здания, а флажок указывает на его крышу, верный ответ — «нет».
+
+    Кстати, карту можно уменьшать и увеличивать с клавиатуры кнопками «+» и «−».
 
 question.IsByPedestrian: Могла ли эта фотография быть сделана пешеходом?
-question.IsByPedestrian.hint: Select ‘yes’ if the photograph could be taken from a street level by person who was walking.‘No’ applies to any photograph taken from above ground (e.g. buildings, observation points, airplanes, etc.) or from any place where walking is impossible.
+question.IsByPedestrian.hint: Ответ «да» подходит, если фотография была снята «с уровня земли», т. е. теоретически её мог сделать находящийся на улице человек. Отвечать «нет» следует, если фотограф был над землёй (на крыше здания, в самолёте и т. д.), либо в любом другом месте, где прогулка пешком невозможна.
 
 question.IsSpaceAttractive: Выбрали ли вы окрестность для прогулки?
-question.IsSpaceAttractive.hint: ""
+question.IsSpaceAttractive.hint: Поставьте «да», если вам кажется, что место на фотографии подошло бы для прогулки. Пожалуйста, не берите во внимание качество самого снимка.
 
 button.next: Далее
 
