--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
@@ -1,6 +1,10 @@
 title: Оценка содержимого фотографий
 pat_default_index.h1: Оценка содержимого фотографий
 
+og.title: Оценка содержимого фотографий
+og.description: ""
+footer.contact_author: связаться с автором
+
 participant.title: You are anonimously authenticated as this person and submit data under this name. No personal data is being collected.
 participant: Участник %n%
 
