--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
@@ -55,3 +55,5 @@ hint.dashboard.queue_extended_3: Супер, спасибо! Продолжим?
 hint.dashboard.queue_extended_4: Вы просто звезда оценки фотографий! Так держать!
 hint.dashboard.queue_extended_5: Ваш вклад неоценим! А ведь интересно, да?
 hint.dashboard.queue_extended_6: Это просто нереально!!!
+
+message.error_api: Упс! Что-то пошло не так во время обмена данными с сервером. Пожалуйста, обновите страницу, нажав «ОК». Просим прощения.
