Changed title of share buttons

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.en.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.en.yml
@@ -3,6 +3,7 @@ pat_default_index.h1: Photo Content Assessment
 
 og.title: Photo Content Assessment
 og.description: ""
+share.title: I participated in photo content assessment. Take part too, it’s fun!
 footer.contact_author: email author
 
 index.questions: Would you like to see some photographs of London? Are you curious about how many different things can be happening in this city? Have a spare minute? If your answers are ‘yes’, then this website is made just for you!
