--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
@@ -3,6 +3,7 @@ pat_default_index.h1: Оценка содержимого фотографий
 
 og.title: Оценка содержимого фотографий
 og.description: ""
+share.title: Я принял участие в оценке содержимого фотографий. Рекомендую!
 footer.contact_author: связаться с автором
 
 participant.title: You are anonimously authenticated as this person and submit data under this name. No personal data is being collected.
