--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.en.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.en.yml
@@ -64,7 +64,10 @@ question.TimeOfDay: At what time of the day is the photograph taken?
 question.TimeOfDay.hint: Simply choose the answer that you find the most suitable. The question does not apply to indoor photographs.
 
 question.SubjectTemporary: Is it a photograph of something temporary?
-question.SubjectTemporary.hint: Select ‘yes’ if it is a photograph of an event (a parade, a concert, a marathon, etc.) or of an object that is likely to be quickly removed from where it is taken (a temporary artwork, a parked sport car, etc.). But you can select ‘no’ not only if it is a photograph of something completely still, but also if its content is likely to be found around frequently and constantly (squirrels and swans in parks, ferries on a river, etc.).
+question.SubjectTemporary.hint: |
+    Select ‘yes’ if it is a photograph of an event (a parade, a concert, a marathon, etc.) or of an object that is likely to be quickly removed from where it is taken (a temporary artwork, a parked sport car, etc.). But you can select ‘no’ not only if it is a photograph of something completely still, but also if its content is likely to be found around frequently and constantly (squirrels and swans in parks, ferries on a river, etc.).
+    
+    Weather conditions (snow, rain, etc.) should not be treated as temporary (‘no’).
 
 question.SubjectPeople: Are people the main subject of the photograph?
 question.SubjectPeople.hint: Select ‘yes’ if the main object in the photograph is a human (or several people), e.g. if it is a portrait, a group party photograph, etc. But this should not apply if someone got into the view by a chance, for instance, just walking around − please select ‘no’ in that case.
