Language updates (mainly, translation of home page into Russion).

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
@@ -6,7 +6,47 @@ og.description: ""
 share.title: Я принял участие в оценке содержимого фотографий. Рекомендую!
 footer.contact_author: связаться с автором
 
-participant.title: You are anonimously authenticated as this person and submit data under this name. No personal data is being collected.
+index.questions: Хотите посмотреть фотографии Лондона? Интересно погрузиться в атмосферу жизни в Англии? Есть свободная минутка? 
+
+index.startbutton_newuser: Начать опрос!
+index.startbutton_returninguser: Вернуться к опросу
+
+index.startbutton-agreement: Нажав на эту кнопку, вы подтверждаете, что не возражаете против распространения ваших анонимных ответов.
+index.startbutton-tip: 'Совет: Используйте стрелки на клавиатуре для перемещения между вопросами и выбора ответов, отправляйте результат клавишей «ввод» — так будет гораздо быстрее.'
+
+index.description_1_1: 'Вам предлагается поучаствовать в исследовании применения данных с фото-сайтов для навигации пешеходов. Вы можете помочь, ответив на несколько вопросов о фотографиях, выложенных пользователями '
+index.description_1_2: Фликра
+index.description_1_3: ', '
+index.description_1_4: Панорамио
+index.description_1_5: ' и '
+index.description_1_6: Географа
+index.description_1_7: '. Анкетирование займёт ровно столько времени, сколько вы готовы на него потратить, поэтому стоит поучаствовать даже если у вас есть всего пара минут. Кстати, на сайт можно вернуться в любой момент и продолжить с того места, где закончили. Вся собранная информация являются полностью анонимной, так что бояться абсолютно нечего.'
+index.description_2: Готовы начать? Тогда скорее нажимайте на вон ту большую синюю кнопку! ↗
+index.description_2_returninguser: Готовы продолжить? Тогда скорее нажимайте на вон ту большую синюю кнопку! ↗
+
+index.details-header: Детали проекта
+
+index.details_1_1: 'Исследование проводится '
+index.details_1_2: Александром Качкаевым
+index.details_1_3: ', аспирантом '
+index.details_1_4: Лондонского университета Сити
+index.details_1_5: '. Научный руководитель — '
+index.details_1_6: Джо Вуд
+index.details_1_7: . Знания, полученные в результате проведения анкетирования, помогут реализовать новый алгоритм поиска маршрутов для пешеходов, который планируется сделать публично доступным в конце проекта. Собранные данные будут распространены под свободной лицензией (
+index.details_1_8: CC BY 2.0
+index.details_1_8_title: Creative Commons Attribution 2.0 Generic
+index.details_1_9: '). Анонимность гарантируется, исходный код проекта выложен '
+index.details_1_10: на Гитхаб
+index.details_1_11: .
+
+index.details_2_1: 'Выборка состоит из 900 случайно выбранных фотографий, отмеченных в центре Лондона (по 300 на каждый источник, упомянутый выше). Данные по фотографиям с Фликра и Панорамио берутся посредствам АПИ сервисов и являются собственностью их владельцев. Фотографии с Географа распространяются под лицензией '
+index.details_2_2: CC BY-SA 2.0
+index.details_2_2_title: Creative Commons Attribution-ShareAlike 2.0 Generic (CC BY-SA 2.0) 
+index.details_2_3: '.'
+
+index.details_3_1: Исследование одобрено Комитетом по исследовательской этике Лондонского университета Сити.
+
+participant.title: Вы анонимно делитесь вашими ответами под этим именем. Сбора персональных данных не происходит.
 participant: Участник %n%
 
 answer.yes: да
