--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.en.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.en.yml
@@ -13,13 +13,13 @@ index.startbutton_returninguser: Return to questionnaire
 index.startbutton-agreement: By pressing this button you agree that you don’t mind to anonymously share your answers.
 index.startbutton-tip: 'Tip: You can use arrow keys to give answers and navigate across the questions; press Enter to submit the result − you’ll be much faster.'
 
-index.description_1_1: 'You are asked to take part in the research on how data from photo-sharing websites can be used for pedestrian routing. You can contribute by answering questions about photographs shared on '
+index.description_1_1: 'You are asked to take part in the research on how data from photo-sharing websites can be used for pedestrian routing. You can contribute by answering questions about photographs uploaded to '
 index.description_1_2: Flickr
 index.description_1_3: ', '
 index.description_1_4: Panoramio
-index.description_1_5: ' and '
+index.description_1_5: ' and '
 index.description_1_6: Geograph
-index.description_1_7: '. You are free to spend as much time as you want, so don’t hesitate to participate even you only have a minute − you’ll have a chance to continue at any time if you wish. All collected data are completely anonymous (the only thing we will record about you is an unique id), so there is nothing to worry about.'
+index.description_1_7: '. You are free to spend as much time as you want, so don’t hesitate to participate even if you only have a few minutes − you’ll have a chance to continue at any time if you wish. All collected data are completely anonymous, so there is nothing to worry about.'
 index.description_2: Ready to start? Go ahead and press that big blue button!  ↗
 index.description_2_returninguser: Ready to continue? Go ahead and press that big blue button!  ↗
 
@@ -31,7 +31,7 @@ index.details_1_3: ', PhD student at School of Informatics, '
 index.details_1_4: City University London
 index.details_1_5: ' and is supervised by Professor '
 index.details_1_6: Jo Wood
-index.details_1_7: . The knowledge and experience gained from the questionnaire will be useful when implementing a new pedestrian routing algorithm, which will be made freely available at the end of the project. It is planned to release collected answers under a free license (
+index.details_1_7: . The knowledge and experience gained from the questionnaire will be useful when implementing a new pedestrian routing algorithm, which will be made freely available at the end of the project. Collected answers will be released under a free license (
 index.details_1_8: CC BY 2.0
 index.details_1_8_title: Creative Commons Attribution 2.0 Generic
 index.details_1_9: '). No personal data is being collected and stored; the source code of the app is available '
@@ -43,7 +43,7 @@ index.details_2_2: CC BY-SA 2.0
 index.details_2_2_title: Creative Commons Attribution-ShareAlike 2.0 Generic (CC BY-SA 2.0) 
 index.details_2_3: '.'
 
-index.details_3_1: The research has been approved by the University Research Ethics committee, School of Informatics City University London.
+index.details_3_1: The research has been approved by the University Research Ethics committee, City University London.
 
 participant.title: You are anonimously authenticated as this person and submit data under this name. No personal data is being collected.
 participant: Participant %n%
@@ -59,19 +59,19 @@ question.IsRealPhoto: Is the image a real photograph?
 question.IsRealPhoto.hint: Select ‘no’ if the image is not a photograph (a drawing, a diagram or any other artwork). ‘Yes’ applies to all photographs, even if they are photoshopped or put into a frame.
 
 question.IsOutdoors: Is it a photograph of something outdoors?
-question.IsOutdoors.hint: Select ‘no’ if it is a photograph is of something inside of a building, e. g. taken in a café, museum, railway station, etc. ‘Yes’ applies to photographs of streets, parks, any other types of open spaces, even if they are shot from windows of buildings, cars, aircrafts, etc.
+question.IsOutdoors.hint: Select ‘no’ if it is a photograph of something inside a building, e. g. taken in a café, museum, railway station, etc. ‘Yes’ applies to photographs of streets, parks, any other types of open spaces, even if they are shot from windows of buildings, cars, aircrafts, etc.
 
 question.TimeOfDay: At what time of the day is the photograph taken?
 question.TimeOfDay.hint: Simply choose the answer that you find the most suitable. The question does not apply to indoor photographs.
 
 question.SubjectTemporary: Is it a photograph of something temporary?
 question.SubjectTemporary.hint: |
-    Select ‘yes’ if it is a photograph of an event (a parade, a concert, a marathon, etc.) or of an object that is likely to be quickly removed from where it is taken (a temporary artwork, a parked sport car, etc.). But you can select ‘no’ not only if it is a photograph of something completely still, but also if its content is likely to be found around frequently and constantly (squirrels and swans in parks, ferries on a river, etc.).
+    Select ‘yes’ if it is a photograph of an event (a parade, a concert, a marathon, etc.) or of an object that is likely to be quickly removed from where it is taken (a temporary artwork, a parked sport car, etc.). But you can select ‘no’ not only if it is a photograph of something completely still, but also if its contents are likely to be found around frequently (squirrels and swans in parks, ferries on a river, etc.).
     
     Weather conditions (snow, rain, etc.) should not be treated as temporary (‘no’).
 
 question.SubjectPeople: Are people the main subject of the photograph?
-question.SubjectPeople.hint: Select ‘yes’ if the main object in the photograph is a human (or several people), e.g. if it is a portrait, a group party photograph, etc. But this should not apply if someone got into the view by a chance, for instance, just walking around − please select ‘no’ in that case.
+question.SubjectPeople.hint: Select ‘yes’ if the main object in the photograph is a human (or several people), e.g. if it is a portrait, a group party photograph, etc. But this should not apply if someone got into the view by chance, for instance, just walking around − please select ‘no’ in that case.
 
 question.IsLocationCorrect: Does the photograph seem to be geotagged correctly?
 question.IsLocationCorrect.hint: |
@@ -82,7 +82,7 @@ question.IsLocationCorrect.hint: |
   By the way, the map can be zoomed pressing ‘+’ and ‘−’ on your keyboard.
 
 question.IsByPedestrian: Could the photograph be taken by a pedestrian?
-question.IsByPedestrian.hint: Select ‘yes’ if the photograph could be taken from a street level by person who was walking. ‘No’ applies to any photograph taken from above ground (e.g. buildings, observation points, airplanes, etc.) or from any place where walking is impossible.
+question.IsByPedestrian.hint: Select ‘yes’ if the photograph could be taken from street level. ‘No’ applies to any photograph taken from above ground (e.g. buildings, observation points, airplanes, etc.) or from any place where walking is impossible.
 
 question.IsSpaceAttractive: Does the photograph suggest this is a nice place to walk?
 question.IsSpaceAttractive.hint: Select ‘yes’ if you find an area shown in the photograph attractive for having a leisure walk. Please make judgment of the environment itself, but not of the professionalism of the photographer.
