--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.en.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.en.yml
@@ -1,5 +1,6 @@
 title: Photo Content Assessment
 pat_default_index.h1: Photo Content Assessment
+pat_default_results.h1: ' − Results'
 
 og.title: Photo Content Assessment
 og.description: ""
