Add a warning box saying that the research is over

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
@@ -101,3 +101,5 @@ hint.dashboard.queue_extended_5: Ваш вклад неоценим! А ведь
 hint.dashboard.queue_extended_6: Это просто нереально!!!
 
 message.error_api: Упс! Что-то пошло не так во время обмена данными с сервером. Пожалуйста, обновите страницу, нажав «ОК». Просим прощения.
+
+survey_closed: Сбор данных закончен. Опрос по-прежнему работает, но новые ответы не используются в исследовании. 
