--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/translations/messages.ru.yml
@@ -32,12 +32,15 @@ index.details_1_3: ', аспирантом '
 index.details_1_4: Лондонского университета Сити
 index.details_1_5: '. Научный руководитель — '
 index.details_1_6: Джо Вуд
-index.details_1_7: . Знания, полученные в результате проведения анкетирования, помогут реализовать новый алгоритм поиска маршрутов для пешеходов, который планируется сделать публично доступным в конце проекта. Собранные данные будут распространены под свободной лицензией (
-index.details_1_8: CC BY 2.0
-index.details_1_8_title: Creative Commons Attribution 2.0 Generic
-index.details_1_9: '). Анонимность гарантируется, исходный код проекта выложен '
-index.details_1_10: на Гитхаб
-index.details_1_11: .
+index.details_1_7: '. Знания, полученные в результате проведения анкетирования, помогут реализовать новый алгоритм поиска маршрутов для пешеходов, который планируется сделать публично доступным в конце проекта. Собранные данные '
+index.details_1_8: распространяются
+index.details_1_8_title: ''
+index.details_1_9: ' под свободной лицензией ('
+index.details_1_10: CC BY 2.0
+index.details_1_10_title: Creative Commons Attribution 2.0 Generic
+index.details_1_11: '). Анонимность гарантируется, исходный код проекта выложен '
+index.details_1_12: на Гитхаб
+index.details_1_13: .
 
 index.details_2_1: 'Выборка состоит из 900 случайно выбранных фотографий, отмеченных в центре Лондона (по 300 на каждый источник, упомянутый выше). Данные по фотографиям с Фликра и Панорамио берутся посредствам АПИ сервисов и являются собственностью их владельцев. Фотографии с Географа распространяются под лицензией '
 index.details_2_2: CC BY-SA 2.0
